--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SkillActivity"></activity>
+        <activity android:name=".controller.FinishActivity"></activity>
+        <activity android:name=".SkillActivity" />
         <activity android:name=".BaseActivity" />
         <activity android:name=".League" />
         <activity android:name=".WelcomeActivity">
